updated openapi.yaml
