# src/routes/v1/reviews.ts
@@ -5,19 +5,23 @@ import {
   deleteReview,
   getReviewsForItem,
   getReviewByUser,
+  deleteReviewAdmin
 } from '../../controllers/reviews';
-import { requireAuth } from '../../middleware/requireAuth';
+import { requireAuth, requireRole } from '../../middleware/requireAuth';
 
 const reviewsRouter = Router();
 
 // Public routes
 reviewsRouter.get('/:mediaType/:mediaId', getReviewsForItem);
-
 reviewsRouter.get('/:mediaType/:mediaId/:userId', getReviewByUser);
 
 // Authenticated routes
 reviewsRouter.post('/', requireAuth, createReview);
 reviewsRouter.put('/:id', requireAuth, updateReview);
 reviewsRouter.delete('/:id', requireAuth, deleteReview);
+
+// Admin delete
+reviewsRouter.delete('/admin/:id', requireAuth, requireRole('admin'), deleteReviewAdmin);
+
 
 export { reviewsRouter };
